Refactor: Switched from List.of to Arrays.asList in ChartDemoSettingData
- Updated ChartDemoSettingData class to use Arrays.asList instead of
List.of to allow for null values in data set.